# click_android

./: Cargo.toml  build.rs  ui.slint
src/: main.rs
