[package]
name = "click_android"
version = "0.2.0"
edition = "2021"

[dependencies]
i-slint-backend-winit = "1.8.0"
image = "0.25.5"
shadow-rs = "0.36.0"
slint = "1.8.0"

[build-dependencies]
shadow-rs = "0.36.0"
slint-build = "1.8.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
